--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,18 @@ main {
     align-items: center;
     height: 100vh;
 }
+
+input::placeholder {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-style: "normal";
+    font-size: 14px;
+    line-height: 28px;
+}
+
+input[type=password]::-ms-reveal,
+input[type=password]::-ms-clear {
+    display: none;
+}
